--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="fb_login_protocol_scheme">fbfb_app_id</string>
     <string name="facebook_client_token">fb_client_token</string>
     <string name="about_bit_text">Posting - приложени для автоматизации процесса постинга в различных соц. сетях. Здесь вы сможете в пару простых кликов связать ваши учетные записи на разных медиа площадках. После этого действия вам будет досутпен функционал постинга на этих. площадках. Следуйте инструкции ниже:</string>
+    <string name="lorem_ipsum_text_100_symb">Pizza ipsum dolor meat lovers buffalo. Party pesto pepperoni garlic rib lasagna roll broccoli Bianca. Spinach Chicago Aussie stuffed pizza pepperoni mayo. Stuffed ipsum and sautéed tomatoes cheese pepperoni. Mozzarella meat sausage cheese onions personal pie. Mouth steak marinara meat NY Hawaiian black. Pizza stuffed lasagna pizza pepperoni party. Lovers thin and Chicago mouth mushrooms personal. Style steak pan wing ipsum. Extra Hawaiian Chicago onions large mozzarella stuffed red.</string>
 </resources>
