add ui for posting process

--- a/feature-create-post/src/main/res/values/strings.xml
+++ b/feature-create-post/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="telegram">Телеграм</string>
     <string name="page">Страница</string>
     <string name="groups">Группы</string>
+    <string name="nothing_selected">Ничего не выбрано</string>
 </resources>
