posts feed simple logic added

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="password">Пароль</string>
     <string name="register">Зарегестрироваться</string>
     <string name="repeat_password">Поворите пароль</string>
+    <string name="icon">icon\n</string>
 </resources>
