--- a/feature-posts-feed/src/main/res/values/strings.xml
+++ b/feature-posts-feed/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="post_removing_description">Данный пост удалиться с ленты локально. Вы уверены в своем действии?</string>
     <string name="remove_post">Удалить пост</string>
     <string name="cancel">Отмена</string>
+    <string name="history">История</string>
+    <string name="Its_still_empty_here">Здесь пока пусто.</string>
+    <string name="post_without_text">Пост без текста</string>
 </resources>
