--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">PostingApp</string>
-    <string name="hello_its_posting">Вас привествует Posting</string>
+    <string name="hello_its_posting">Вас приветствует Posting</string>
     <string name="type_your_data">Введите свои данные</string>
     <string name="username_or_email">Логин или e-mail</string>
     <string name="password">Пароль</string>
-    <string name="register">Зарегестрироваться</string>
-    <string name="repeat_password">Поворите пароль</string>
+    <string name="register">Зарегистрироваться</string>
+    <string name="repeat_password">Повторите пароль</string>
     <string name="icon">icon\n</string>
 </resources>
