--- a/feature-settings/src/main/res/values/strings.xml
+++ b/feature-settings/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="choose_subsection">Выберите подраздел:</string>
     <string name="social_media_settings">Настройка социальных сетей</string>
     <string name="about_app">О приложении</string>
-    <string name="about_big_text">Posting - приложение для автоматизации процесса постинга в различных социальных сетях. Здесь вы сможете в пару простых кликов связать ваши учетные записи на разных медиа-площадках. После этого вам будет досутпен функционал постинга.</string>
+    <string name="about_big_text">Posting - приложение для автоматизации процесса постинга в различных социальных сетях. Здесь вы сможете в пару простых кликов связать ваши учетные записи на разных медиа-площадках. После этого вам будет доступен функционал постинга.</string>
     <string name="choose_group">Выберите группу</string>
     <string name="tg_username">\@%1s</string>
     <string name="text_was_succesfully_copied">Текст успешно скопирован в буфер обмена!</string>
