--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="register">Зарегистрироваться</string>
     <string name="repeat_password">Повторите пароль</string>
     <string name="icon">icon\n</string>
+    <string name="error_default_msg">Произошла ошибка. Попробуйте еще раз…</string>
 </resources>
