--- a/feature/settings/src/main/res/values/strings.xml
+++ b/feature/settings/src/main/res/values/strings.xml
@@ -37,4 +37,11 @@
     <string name="feedback_description">Сейчас будет открыта ссылка, по которой вы сможете оставить свой фидбэк.</string>
     <string name="open">Открыть</string>
     <string name="cancel">Отмена</string>
+    <string name="cant_find_programm_to_open_telegram">Не удалось найти приложение на вашем устройстве, с помощью которого можно открыть телеграм-клиент. Пожалуйста, скачайте бразуер или приложение Telegram.</string>
+    <string name="ok">Окей</string>
+    <string name="authorization_error">Ошибка авторизации</string>
+    <string name="cant_authorize_via_vk">Не удалось подключить учетную запись Вконтакте. Повторите попытку.\nОшибка:%s</string>
+    <string name="error_when_work_with_local_storage">Произошла ошибка при работе с локальными данными. Повторите попытку.</string>
+    <string name="error_when_work_with_remote_storage">Произошла ошибка при работе с данными удаленного хранилища. Повторите попытку.</string>
+    <string name="tg_initialization_error">Не удалось инциализировать данные из Telegram. Попробуйте еще раз</string>
 </resources>
