fix old logic in posts feed

--- a/feature/posts-feed/src/main/res/values/strings.xml
+++ b/feature/posts-feed/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="history">История</string>
     <string name="Its_still_empty_here">Здесь пока пусто.</string>
     <string name="post_without_text">Пост без текста</string>
+    <string name="remove">Удалить</string>
 </resources>
